--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,44 +18,34 @@ body {
   min-height: 100vh;
 }
 
-/* .background img {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  z-index: -1;
-} */
-
-.change-background {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-}
-
-.change-background .icon {
-  font-size: 30px;
-}
 /* ======== HEADER ======== */
 
 header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: rgba(0, 0, 0, 0.7);
-  padding: 10px 0;
   color: rgb(250, 247, 215);
+  text-align: center;
 }
 
-.header-icon {
-  height: 60px;
-  margin: 0 16px;
+header h1 {
+  font-size: 24px;
+  padding-top: 16px;
+  padding-bottom: 8px;
+}
+
+.change-background .icon {
+  font-size: 26px;
+  padding-top: 8px;
+  padding-bottom: 16px;
 }
 
 /* ======== MAIN SECTION ======== */
 
 main {
-  width: 40vw;
-  margin: 0 auto;
+  width: 85vw;
+  margin: 0 auto 20vh auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .chuck-img-container {
@@ -68,32 +58,41 @@ main {
 }
 
 .quotes-box {
-  width: 100%;
-  height: 180px;
+  height: 230px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  margin: 0 auto 5px auto;
+}
+
+#quotes-text {
   color: white;
+  text-align: center;
 }
 
 .random-btn-container {
   width: 100%;
   text-align: center;
-  margin: 16px 0;
 }
 
 .generate-section {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
 }
 
 .generate-section > * {
   width: 160px;
+  margin: 0 10px;
 }
 
 .random-btn:hover,
 .generate-btn:hover {
   cursor: pointer;
-  background-color: rgba(44, 99, 64, 0.8);
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 select:hover {
@@ -104,8 +103,9 @@ select:hover {
   padding: 10px 10px;
   border-radius: 8px;
   border: none;
-  background-color: rgba(29, 65, 42, 0.8);
+  background-color: rgba(0, 0, 0, 0.7);
   color: rgb(250, 247, 215);
+  margin: 5px 0;
 }
 
 /* ======== FOOTER ======== */
@@ -119,6 +119,7 @@ footer {
   color: rgb(250, 247, 215);
   width: 100%;
   padding: 10px 0;
+  margin-top: 20px;
   background-color: rgba(0, 0, 0, 0.6);
 }
 
@@ -128,16 +129,16 @@ a {
 
 /* ======== MEDIA QUERIES ======== */
 
-@media only screen and (max-width: 580px) {
-  main {
-    width: 90%;
+@media only screen and (min-width: 600px) {
+  .quotes-box,
+  .btns-container {
+    width: 510px;
+  }
+  .btns-container {
+    margin: 0 auto;
   }
   .generate-section {
-    flex-direction: column;
-    align-items: center;
-  }
-  .generate-btn {
-    margin: 10px 0;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
-
