fixed footer problem

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 /* .background img {
