--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,14 +75,20 @@ main {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 180px;
+  min-height: 180px;
   padding: 10px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 10px;
   color: white;
   text-align: center;
+  overflow-wrap: break-word;
+  word-break:break-all;
 }
 
+.quotes-box p {
+  overflow-wrap: break-word;
+  word-break:break-all;
+}
 .random-btn-container {
   width: 100%;
   text-align: center;
