--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,6 +70,7 @@ main {
   width: 100%;
   min-height: 180px;
   padding: 10px;
+  margin-bottom: 15px;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 10px;
   color: white;
@@ -82,6 +83,12 @@ main {
   overflow-wrap: break-word;
   word-break: break-all;
 }
+
+.generated-facts-number {
+  color: white;
+  text-align: center;
+}
+
 .random-btn-container {
   width: 100%;
   text-align: center;
