--- a/style/style.css
+++ b/style/style.css
@@ -584,14 +584,6 @@ video {
   margin-bottom: 3rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-1\.5 {
-  margin-bottom: 0.375rem;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -626,10 +618,6 @@ video {
 
 .w-48 {
   width: 12rem;
-}
-
-.w-3\/4 {
-  width: 75%;
 }
 
 .w-full {
@@ -668,16 +656,16 @@ video {
   gap: 2.5rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-1\.5 {
   gap: 0.375rem;
 }
 
 .gap-1 {
   gap: 0.25rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-y-7 {
@@ -758,16 +746,6 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -795,14 +773,6 @@ video {
 
 .pb-28 {
   padding-bottom: 7rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
-}
-
-.pb-20 {
-  padding-bottom: 5rem;
 }
 
 .text-center {
@@ -837,16 +807,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-4xl {
@@ -949,9 +909,9 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-base {
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .sm\:text-3xl {
@@ -959,9 +919,9 @@ video {
     line-height: 2.25rem;
   }
 
-  .sm\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -1025,6 +985,10 @@ video {
 
   .md\:pb-24 {
     padding-bottom: 6rem;
+  }
+
+  .md\:pt-56 {
+    padding-top: 14rem;
   }
 
   .md\:text-4xl {
@@ -1098,18 +1062,9 @@ video {
     font-size: 1.5rem;
     line-height: 2rem;
   }
-
-  .lg\:text-6xl {
-    font-size: 3.75rem;
-    line-height: 1;
-  }
 }
 
 @media (min-width: 1280px) {
-  .xl\:w-679 {
-    width: 42.4rem;
-  }
-
   .xl\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
