--- a/style/style.css
+++ b/style/style.css
@@ -646,10 +646,6 @@ video {
   margin-left: 5rem;
 }
 
-.block {
-  display: block;
-}
-
 .inline-block {
   display: inline-block;
 }
@@ -670,28 +666,16 @@ video {
   height: 12rem;
 }
 
+.h-11 {
+  height: 2.75rem;
+}
+
 .h-9 {
   height: 2.25rem;
 }
 
 .h-96 {
   height: 24rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-3 {
-  height: 0.75rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-11 {
-  height: 2.75rem;
 }
 
 .w-7 {
@@ -708,6 +692,10 @@ video {
 
 .w-48 {
   width: 12rem;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
 
 .w-9 {
@@ -734,32 +722,16 @@ video {
   width: 18rem;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-3 {
-  width: 0.75rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
 .max-w-full {
   max-width: 100%;
 }
 
 .max-w-6xl {
   max-width: 72rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
 }
 
 .appearance-none {
@@ -800,24 +772,16 @@ video {
   gap: 0.5rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-1\.5 {
   gap: 0.375rem;
 }
 
 .gap-1 {
   gap: 0.25rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
 }
 
 .gap-y-7 {
@@ -1054,10 +1018,6 @@ video {
   font-weight: 600;
 }
 
-.capitalize {
-  text-transform: capitalize;
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1094,15 +1054,6 @@ video {
 
 .placeholder\:text-center::placeholder {
   text-align: center;
-}
-
-.hover\:bg-sky-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(3 105 161 / var(--tw-bg-opacity));
-}
-
-.hover\:fill-sky-700:hover {
-  fill: #0369a1;
 }
 
 .hover\:fill-gray-400:hover {
@@ -1170,6 +1121,10 @@ video {
 
   .sm\:w-3\/4 {
     width: 75%;
+  }
+
+  .sm\:w-96 {
+    width: 24rem;
   }
 
   .sm\:py-7 {
@@ -1251,8 +1206,8 @@ video {
     width: 18rem;
   }
 
-  .md\:w-679 {
-    width: 42.4rem;
+  .md\:w-96 {
+    width: 24rem;
   }
 
   .md\:w-full {
@@ -1364,17 +1319,9 @@ video {
     background-color: rgb(250 204 21 / var(--tw-bg-opacity));
   }
 
-  .md\:hover\:fill-gray-400:hover {
-    fill: #9ca3af;
-  }
-
   .md\:hover\:text-yellow-400:hover {
     --tw-text-opacity: 1;
     color: rgb(250 204 21 / var(--tw-text-opacity));
-  }
-
-  .dark .dark\:md\:hover\:fill-gray-400:hover {
-    fill: #9ca3af;
   }
 }
 
