--- a/style/style.css
+++ b/style/style.css
@@ -645,10 +645,6 @@ video {
   display: flex;
 }
 
-.grid {
-  display: grid;
-}
-
 .hidden {
   display: none;
 }
@@ -717,6 +713,14 @@ video {
   width: 18rem;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
 .max-w-full {
   max-width: 100%;
 }
@@ -729,22 +733,14 @@ video {
   max-width: 72rem;
 }
 
+.grow {
+  flex-grow: 1;
+}
+
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-}
-
-.grid-cols-\[50px\] {
-  grid-template-columns: 50px;
-}
-
-.grid-rows-150 {
-  grid-template-rows: repeat(5, 150px);
-}
-
-.grid-rows-180 {
-  grid-template-rows: repeat(5, 180px);
 }
 
 .flex-row {
@@ -755,8 +751,8 @@ video {
   flex-direction: column;
 }
 
-.place-items-center {
-  place-items: center;
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -799,6 +795,49 @@ video {
   row-gap: 1.75rem;
 }
 
+.gap-y-16 {
+  row-gap: 4rem;
+}
+
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+}
+
+.gap-y-20 {
+  row-gap: 5rem;
+}
+
+.gap-x-20 {
+  -moz-column-gap: 5rem;
+       column-gap: 5rem;
+}
+
+.gap-x-24 {
+  -moz-column-gap: 6rem;
+       column-gap: 6rem;
+}
+
+.gap-x-28 {
+  -moz-column-gap: 7rem;
+       column-gap: 7rem;
+}
+
+.gap-x-36 {
+  -moz-column-gap: 9rem;
+       column-gap: 9rem;
+}
+
+.gap-x-10 {
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
+}
+
+.gap-x-3 {
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
+}
+
 .self-center {
   align-self: center;
 }
@@ -816,8 +855,8 @@ video {
   word-break: normal;
 }
 
-.break-all {
-  word-break: break-all;
+.break-words {
+  overflow-wrap: break-word;
 }
 
 .rounded-md {
@@ -947,11 +986,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .pt-10 {
@@ -1137,10 +1171,6 @@ video {
     margin-bottom: 2.5rem;
   }
 
-  .sm\:block {
-    display: block;
-  }
-
   .sm\:inline-block {
     display: inline-block;
   }
@@ -1153,12 +1183,9 @@ video {
     width: 24rem;
   }
 
-  .sm\:grid-cols-\[50px\] {
-    grid-template-columns: 50px;
-  }
-
-  .sm\:grid-rows-150 {
-    grid-template-rows: repeat(5, 150px);
+  .sm\:gap-x-10 {
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
   }
 
   .sm\:py-7 {
@@ -1256,12 +1283,12 @@ video {
     width: 100%;
   }
 
-  .md\:grid-cols-6 {
-    grid-template-columns: repeat(6, minmax(0, 1fr));
+  .md\:w-2\/3 {
+    width: 66.666667%;
   }
 
-  .md\:grid-cols-\[100px\] {
-    grid-template-columns: 100px;
+  .md\:grid-cols-6 {
+    grid-template-columns: repeat(6, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -1285,6 +1312,16 @@ video {
          column-gap: 1rem;
   }
 
+  .md\:gap-x-20 {
+    -moz-column-gap: 5rem;
+         column-gap: 5rem;
+  }
+
+  .md\:gap-x-16 {
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+
   .md\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -1305,11 +1342,6 @@ video {
     padding-bottom: 2.5rem;
   }
 
-  .md\:px-14 {
-    padding-left: 3.5rem;
-    padding-right: 3.5rem;
-  }
-
   .md\:pt-20 {
     padding-top: 5rem;
   }
@@ -1328,6 +1360,26 @@ video {
 
   .md\:pb-56 {
     padding-bottom: 14rem;
+  }
+
+  .md\:pl-10 {
+    padding-left: 2.5rem;
+  }
+
+  .md\:pr-24 {
+    padding-right: 6rem;
+  }
+
+  .md\:pl-28 {
+    padding-left: 7rem;
+  }
+
+  .md\:pl-36 {
+    padding-left: 9rem;
+  }
+
+  .md\:pl-40 {
+    padding-left: 10rem;
   }
 
   .md\:text-left {
@@ -1403,13 +1455,42 @@ video {
     margin-bottom: 4rem;
   }
 
+  .lg\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
+  .lg\:w-4\/5 {
+    width: 80%;
+  }
+
   .lg\:max-w-4xl {
     max-width: 56rem;
+  }
+
+  .lg\:items-start {
+    align-items: flex-start;
+  }
+
+  .lg\:gap-x-36 {
+    -moz-column-gap: 9rem;
+         column-gap: 9rem;
   }
 
   .lg\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .lg\:pl-40 {
+    padding-left: 10rem;
+  }
+
+  .lg\:pr-24 {
+    padding-right: 6rem;
   }
 
   .lg\:text-7xl {
@@ -1441,11 +1522,33 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
 }
 
 @media (min-width: 1280px) {
+  .xl\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .xl\:gap-x-36 {
+    -moz-column-gap: 9rem;
+         column-gap: 9rem;
+  }
+
   .xl\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .xl\:pl-40 {
+    padding-left: 10rem;
+  }
+
+  .xl\:pr-24 {
+    padding-right: 6rem;
   }
 }
